[gd_scene load_steps=8 format=3 uid="uid://dtwq4522nutgs"]

[ext_resource type="Texture2D" uid="uid://hr6putfx44t8" path="res://potato_healthy.png" id="1_2rsn5"]
[ext_resource type="Script" path="res://store.gd" id="1_b464h"]
[ext_resource type="Texture2D" uid="uid://dqx4rpsb68htc" path="res://fava_healthy.png" id="3_71kv6"]
[ext_resource type="Texture2D" uid="uid://bb3secunecqoy" path="res://quinoa_healthy.png" id="3_y5rnr"]
[ext_resource type="Texture2D" uid="uid://u36vhusj1u14" path="res://ichu_healthy.png" id="4_qmdbe"]
[ext_resource type="AudioStream" uid="uid://dekrf6h41esro" path="res://music/villian or shop.mp3" id="6_frtet"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvdgt"]
bg_color = Color(0.709804, 0.678431, 0.141176, 1)

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b464h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vvdgt")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 29.0
offset_right = 475.0
offset_bottom = 136.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "DINGY BOB\"S GLORIOUS SHOP"

[node name="RichTextLabel2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 633.0
offset_top = 51.0
offset_right = 1033.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "SOL: "
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -443.0
offset_top = -148.0
offset_right = 457.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/separation = 30

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Potato"

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Fava"

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Quinoa"

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Ichu"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_2rsn5")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_71kv6")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer3" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("3_y5rnr")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer4" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("4_qmdbe")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer2/BoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("6_frtet")
autoplay = true

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/BoxContainer/Sprite2D" to="." method="_on_potato_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/BoxContainer2/Sprite2D" to="." method="_on_fava_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/BoxContainer3/Sprite2D" to="." method="_on_quinoa_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/BoxContainer4/Sprite2D" to="." method="_on_ichu_pressed"]
